--- a/src/views/editReceipt.ejs
+++ b/src/views/editReceipt.ejs
@@ -60,11 +60,12 @@
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Número Recibo</label>
                                         <div class="col-sm-9">
                                             <input 
-                                                type="number"
+                                                type="text"
                                                 name="numero_recibo"
                                                 id="numero_recibo"
                                                 value="<%= receipt.numero_recibo %>" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
