--- a/src/views/editOwnAgent.ejs
+++ b/src/views/editOwnAgent.ejs
@@ -34,7 +34,7 @@
                                                 name="cedula_agente_propio"
                                                 id="cedula_agente_propio"
                                                 value="<%= ownAgent.cedula_agente_propio %>"
-                                                class="form-control number_format"
+                                                class="form-control cedula"
                                                 required
                                             >
                                         </div>
