--- a/src/views/editRiskDiverse.ejs
+++ b/src/views/editRiskDiverse.ejs
@@ -48,7 +48,7 @@
                                                 name="cedula_riesgo_diverso"
                                                 id="cedula_riesgo_diverso"
                                                 value="<%= riskDiverse.cedula_riesgo_diverso %>" 
-                                                class="form-control number_format"
+                                                class="form-control cedula"
                                             >
                                         </div>
                                     </div>
