--- a/src/views/ownAgentForm.ejs
+++ b/src/views/ownAgentForm.ejs
@@ -34,7 +34,7 @@
                                                 name="cedula_agente_propio"
                                                 id="cedula_agente_propio"
                                                 placeholder="Cédula de Agente Propio *" 
-                                                class="form-control number_format"
+                                                class="form-control cedula"
                                                 required
                                             >
                                         </div>
