--- a/src/views/receiptForm.ejs
+++ b/src/views/receiptForm.ejs
@@ -62,8 +62,8 @@
                                                 name="id_rif_asegurado"
                                                 id="id_rif_asegurado"
                                                 onkeyup="pasarAgentePropio();"
-                                                placeholder="Cédula/Rif (Cédula escribir con puntos de miles) *" 
-                                                class="form-control"
+                                                placeholder="Cédula/Rif *" 
+                                                class="form-control cedula_rif"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                 required
                                             >
