--- a/src/views/userForm.ejs
+++ b/src/views/userForm.ejs
@@ -34,7 +34,7 @@
                                                 name="id_rif"
                                                 id="id_rif"
                                                 placeholder="Cédula/Rif *" 
-                                                class="form-control"
+                                                class="form-control cedula_rif"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
