--- a/src/views/editBeneficiary.ejs
+++ b/src/views/editBeneficiary.ejs
@@ -48,7 +48,7 @@
                                                 name="cedula_beneficiario"
                                                 id="cedula_beneficiario"
                                                 value="<%= beneficiary.cedula_beneficiario %>" 
-                                                class="form-control number_format"
+                                                class="form-control cedula"
                                                 required
                                             >
                                         </div>
