--- a/src/views/editExecutive.ejs
+++ b/src/views/editExecutive.ejs
@@ -34,7 +34,7 @@
                                                 name="cedula_ejecutivo"
                                                 id="cedula_ejecutivo"
                                                 value="<%= executive.cedula_ejecutivo %>"
-                                                class="form-control number_format"
+                                                class="form-control cedula"
                                                 required
                                             >
                                         </div>
