--- a/src/views/editUser.ejs
+++ b/src/views/editUser.ejs
@@ -49,7 +49,7 @@
                                                     name="cedula_usuario"
                                                     id="cedula_usuario"
                                                     value="<%= user.cedula_usuario %>"
-                                                    class="form-control number_format"
+                                                    class="form-control cedula_rif"
                                                     required
                                                 >
                                             </div>
