--- a/src/views/layouts/footerClaim.ejs
+++ b/src/views/layouts/footerClaim.ejs
@@ -83,6 +83,7 @@
                     break;
                 } else {
                     document.getElementById("nombre_razon_asegurado").value = '';
+                    document.getElementById("nombre_beneficiario").value = '';
                 }
             }
         } else {
@@ -95,9 +96,11 @@
                         break;
                     } else {
                         document.getElementById("nombre_razon_asegurado").value = '';
+                        document.getElementById("nombre_beneficiario").value = '';
                     }
                 } else if (idRif.startsWith('')) {
                     document.getElementById("nombre_razon_asegurado").value = '';
+                    document.getElementById("nombre_beneficiario").value = '';
                 }
             }
         }
@@ -222,7 +225,37 @@
             parteEntera = entrada[0].replace(/\./g, ''),
             parteDecimal = entrada[1],
             salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-            e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+            e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+        }, false); 
+    }
+</script>
+
+<script>
+    var separador = document.getElementsByClassName('cedula');
+    for (var i = 0 ; i < separador.length; i++) {
+        separador[i].addEventListener('input', (e) => {
+            var entrada = e.target.value.split(','),
+            parteEntera = entrada[0].replace(/\./g, ''),
+            parteDecimal = entrada[1],
+            salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+            e.target.value = salida;
+        }, false); 
+    }
+</script>
+
+<script>
+    var separador = document.getElementsByClassName('cedula_rif');
+    for (var i = 0 ; i < separador.length; i++) {
+        separador[i].addEventListener('input', (e) => {
+            var entrada = e.target.value.split(',');
+            var parteEntera = entrada[0].replace(/\./g, '');
+            var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+            if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                var parteRif = entrada[0];
+                e.target.value = parteRif;
+            } else {
+                e.target.value = salida;
+            }
         }, false); 
     }
 </script>
