--- a/src/views/layouts/footerCollectiveWizardForm.ejs
+++ b/src/views/layouts/footerCollectiveWizardForm.ejs
@@ -117,7 +117,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -129,7 +145,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -141,7 +157,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -153,7 +169,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -165,7 +181,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -261,7 +277,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -273,7 +305,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -285,7 +317,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -297,7 +329,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -309,7 +341,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -405,7 +437,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -417,7 +465,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -429,7 +477,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -441,7 +489,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -453,7 +501,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
