--- a/src/views/layouts/footerExtraWizardForm.ejs
+++ b/src/views/layouts/footerExtraWizardForm.ejs
@@ -118,7 +118,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -130,7 +146,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -142,7 +158,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -154,7 +170,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -166,7 +182,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -262,7 +278,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -274,7 +306,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -286,7 +318,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -298,7 +330,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -310,7 +342,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -403,7 +435,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -415,7 +463,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -427,7 +475,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -439,7 +487,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -451,7 +499,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -544,7 +592,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -556,7 +620,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -568,7 +632,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -580,7 +644,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -592,7 +656,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
