--- a/src/views/layouts/footerReceipt.ejs
+++ b/src/views/layouts/footerReceipt.ejs
@@ -76,7 +76,24 @@
                 parteEntera = entrada[0].replace(/\./g, ''),
                 parteDecimal = entrada[1],
                 salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+            }, false); 
+        }
+    </script>
+
+    <script>
+        var separador = document.getElementsByClassName('cedula_rif');
+        for (var i = 0 ; i < separador.length; i++) {
+            separador[i].addEventListener('input', (e) => {
+                var entrada = e.target.value.split(',');
+                var parteEntera = entrada[0].replace(/\./g, '');
+                var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                    var parteRif = entrada[0];
+                    e.target.value = parteRif;
+                } else {
+                    e.target.value = salida;
+                }
             }, false); 
         }
     </script>
