--- a/src/views/layouts/footerWizardForm.ejs
+++ b/src/views/layouts/footerWizardForm.ejs
@@ -112,7 +112,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -124,7 +140,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -136,7 +152,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -148,7 +164,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -239,7 +255,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -251,7 +283,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -263,7 +295,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -275,7 +307,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -366,7 +398,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -378,7 +426,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -390,7 +438,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -402,7 +450,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -493,7 +541,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -505,7 +569,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -517,7 +581,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -529,7 +593,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -620,7 +684,23 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
+                }, false); 
+            }    
+        });
+        $("#policy-form").on('keyup','.cedula_rif',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(',');
+                    var parteEntera = entrada[0].replace(/\./g, '');
+                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
+                        var parteRif = entrada[0];
+                        e.target.value = parteRif;
+                    } else {
+                        e.target.value = salida;
+                    }
                 }, false); 
             }    
         });
@@ -632,7 +712,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -644,7 +724,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
@@ -656,7 +736,7 @@
                     parteEntera = entrada[0].replace(/\./g, ''),
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : ",00");
                 }, false); 
             }    
         });
