--- a/src/views/naturalInsuredForm.ejs
+++ b/src/views/naturalInsuredForm.ejs
@@ -34,7 +34,7 @@
                                                 name="cedula_asegurado_per_nat"
                                                 id="cedula_asegurado_per_nat"
                                                 placeholder="Cédula *" 
-                                                class="form-control number_format"
+                                                class="form-control cedula"
                                                 required
                                             >
                                         </div>
