--- a/src/views/patrimonialPolicyForm.ejs
+++ b/src/views/patrimonialPolicyForm.ejs
@@ -55,8 +55,8 @@
                                                         name="id_rif_tomador"
                                                         id="id_rif_tomador"
                                                         onkeyup="pasarNombreTomador();"
-                                                        placeholder="Cédula/Rif (Cédula escribir con puntos de miles) *" 
-                                                        class="form-control"
+                                                        placeholder="Cédula/Rif *" 
+                                                        class="form-control cedula_rif"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
@@ -71,8 +71,8 @@
                                                         name="id_rif_asegurado"
                                                         id="id_rif_asegurado"
                                                         onkeyup="pasarNombreAsegurado();"
-                                                        placeholder="Cédula/Rif (Cédula escribir con puntos de miles) *" 
-                                                        class="form-control"
+                                                        placeholder="Cédula/Rif *" 
+                                                        class="form-control cedula_rif"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
