Arreglos de vista y modulos de poliza, colectivo, recibo, reclamo, beneficiario y riesgos diversos

--- a/src/views/patrimonialPolicyForm.ejs
+++ b/src/views/patrimonialPolicyForm.ejs
@@ -172,7 +172,7 @@
                                                         name="tasa_poliza"
                                                         id="tasa_poliza"
                                                         placeholder="Tasa Póliza *" 
-                                                        class="form-control number_format"
+                                                        class="form-control"
                                                         required
                                                     >
                                                 </div>
