--- a/src/views/bailPolicyForm.ejs
+++ b/src/views/bailPolicyForm.ejs
@@ -166,7 +166,7 @@
                                                         name="tasa_poliza"
                                                         id="tasa_poliza"
                                                         placeholder="Tasa Póliza *" 
-                                                        class="form-control number_format"
+                                                        class="form-control"
                                                         required
                                                     >
                                                 </div>
